refractoring to document alphapro_fase2

--- a/src/app/avaliation/av-dash/av-dash.component.html
+++ b/src/app/avaliation/av-dash/av-dash.component.html
@@ -30,7 +30,7 @@
 
                 <mat-card>
                     <mat-card-header routerLink="/qpaf/">
-                        <mat-card-subtitle>Questionário de Prontidão para a Atividade Fisica (PAR-Q)
+                        <mat-card-subtitle>Questionário de Prontidão para a Atividade Física (PAR-Q)
                         </mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
@@ -66,17 +66,17 @@
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/imc/">
-                        <mat-card-subtitle i18n="Subtitle">Indice Massa Corporal (IMC)</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Índice Massa Corporal (IMC)</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/ircq/">
-                        <mat-card-subtitle i18n="Subtitle">Indice Relação Cintura/Quadril (IRCQ)</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Índice Relação Cintura/Quadril (IRCQ)</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/ic/">
-                        <mat-card-subtitle i18n="Subtitle">Indice de Conicidade (IC)</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Índice de Conicidade (IC)</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
