--- a/src/app/avaliation/dobras/carter/carter.component.html
+++ b/src/app/avaliation/dobras/carter/carter.component.html
@@ -84,7 +84,7 @@
                     </td>
                 </tr>
                  <tr>
-                    <th>Media</th>
+                    <th>Média</th>
                     <td *ngIf="pointer>=1">
                         {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular
                                               + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural
