--- a/src/app/avaliation/dobras/guedes/guedes.component.html
+++ b/src/app/avaliation/dobras/guedes/guedes.component.html
@@ -75,7 +75,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Media</th>
+                        <th i18n>Média</th>
                         <td *ngIf="pointer>=1 && sexo=='M'">
                             {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].suprailiaca
                            + +evaluation[pointer-1].abdominal) / 3 | number: '1.2-2': locale}}</td>
