--- a/src/app/avaliation/dobras/jp7/jp7.component.html
+++ b/src/app/avaliation/dobras/jp7/jp7.component.html
@@ -92,7 +92,7 @@
                     </tr>
 
                     <tr>
-                        <th i18n>Media</th>
+                        <th i18n>Média</th>
                         <td *ngIf="pointer>=1">
                             {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular + +evaluation[pointer-1].peitoral 
                                + +evaluation[pointer-1].axilar + +evaluation[pointer-1].suprailiaca + +evaluation[pointer-1].abdominal 
