--- a/src/app/avaliation/dobras/pb4/pb4.component.html
+++ b/src/app/avaliation/dobras/pb4/pb4.component.html
@@ -81,7 +81,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Media</th>
+                        <th i18n>Média</th>
                         <td *ngIf="pointer>=1 && sex=='M'">
                             {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular
                           + +evaluation[pointer-1].geminal + +evaluation[pointer-1].suprailiaca) / 4 | number: '1.2-2': locale }}
