--- a/src/app/avaliation/dobras/slaugther/slaugther.component.html
+++ b/src/app/avaliation/dobras/slaugther/slaugther.component.html
@@ -46,7 +46,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Media</th>
+                        <th i18n>Média</th>
                         <td *ngIf="pointer>=1">
                             {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].geminal)/2 | number: '1.2-2': locale }}
                         </td>
