--- a/src/app/avaliation/dobras/wb2/wb2.component.html
+++ b/src/app/avaliation/dobras/wb2/wb2.component.html
@@ -47,7 +47,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Media</th>
+                        <th i18n>Média</th>
                         <td *ngIf="pointer>=1">
                             {{(+evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural) / 2 | number: '1.2-2': locale}}
                         </td>
