--- a/src/app/avaliation/dobras/wb3/wb3.component.html
+++ b/src/app/avaliation/dobras/wb3/wb3.component.html
@@ -57,7 +57,7 @@
                     </tr>
 
                     <tr>
-                        <th i18n>Media</th>
+                        <th i18n>Média</th>
                         <td *ngIf="pointer>=1">
                             {{(+evaluation[pointer-1].subescapular + +evaluation[pointer-1].triciptal 
                            + +evaluation[pointer-1].crural) / 3 | number: '1.2-2': locale}}
