--- a/src/app/avaliation/risco/rddc/rddc.component.html
+++ b/src/app/avaliation/risco/rddc/rddc.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h1 i18n>Risco de Desenvolvimento de Dor na Coluna</h1>
+        <h1 i18n>Risco de Dor na Coluna</h1>
     </div>
 
     <div class="section">
@@ -123,7 +123,7 @@
             </mat-card>
 
             <!-- Resultado -->
-            <mat-card class="mat-card-resultado">
+            <mat-card class="mat-card-resultado {{classRisco}}">
                 <mat-card-header>
                     <mat-card-title>NÍVEL DE RISCO</mat-card-title>
                 </mat-card-header>
