--- a/src/app/avaliation/dobras/sloan/sloan.component.html
+++ b/src/app/avaliation/dobras/sloan/sloan.component.html
@@ -63,7 +63,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Media</th>
+                        <th i18n>Média</th>
                         <td *ngIf="pointer>=1 && sexo =='M'">
                             {{(+evaluation[pointer-1].subescapular + +evaluation[pointer-1].crural) / 2 |number: '1.2-2': locale}}
                         </td>
