--- a/src/app/avaliation/dobras/will/will.component.html
+++ b/src/app/avaliation/dobras/will/will.component.html
@@ -66,7 +66,7 @@
                     </td>
                 </tr>
                  <tr>
-                    <th i18n>Media</th>
+                    <th i18n>Média</th>
                     <td *ngIf="pointer>=1">
                         {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular 
                            + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].geminal) / 4 | number: '1.2-2': locale}}
