--- a/src/app/avaliation/risco/qpaf/qpaf.component.html
+++ b/src/app/avaliation/risco/qpaf/qpaf.component.html
@@ -8,7 +8,7 @@
             <mat-card>
                 <mat-card-content>
                     <p i18n>1) Seu médico já lhe disse que você é portador de um problema cardíaco e que somente deve
-                        fazer atividade física recomendada por um profissional da saude?
+                        fazer atividade física recomendada por um profissional da saúde?
                     </p>
                     <div class="flex-radio-group">
                         <mat-radio-group aria-label="Select an option" #parq1="ngModel" name="parq1"
@@ -77,7 +77,7 @@
             <mat-card>
                 <mat-card-content>
                     <p i18n>6) Seu médico está lhe receitando atualmente medicamentos (por exemplo, diuréticos) para a
-                        Pressão arterial ou algum problema cardíaco?</p>
+                        pressão arterial ou algum problema cardíaco?</p>
                     <div class="flex-radio-group">
                         <mat-radio-group aria-label="Select an option" #parq6="ngModel" name="parq6"
                             [(ngModel)]="student.parq6" (change)="calcRisco(f.value)">
