refactoring input de data

--- a/src/app/avaliation/CardioPulmunar/natacao/natacao.component.html
+++ b/src/app/avaliation/CardioPulmunar/natacao/natacao.component.html
@@ -13,8 +13,7 @@
                         <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}</th>
                         <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}</th>
                         <th class="th-top" *ngIf="addEval">
-                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                                style="width: 110px;">
+                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
                         </th>
                     </tr>
                 </thead>
