--- a/src/app/avaliation/evaluation/evaluation.component.html
+++ b/src/app/avaliation/evaluation/evaluation.component.html
@@ -26,7 +26,7 @@
                         <td *ngIf="pointer>=0">{{evaluation[pointer].avaliador}}</td>
                         <td *ngIf="addEval">
                             <input name="avaliador" #avaliador="ngModel" [(ngModel)]="newEvaluation.avaliador"
-                                type="text" style="width: 110px">
+                                type="text"  class="data-input">
                         </td>
                     </tr>
                     <tr>
