--- a/src/app/avaliation/flexibilidade/flexiteste/flexiteste.component.html
+++ b/src/app/avaliation/flexibilidade/flexiteste/flexiteste.component.html
@@ -19,8 +19,7 @@
                                 <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}
                                 </th>
                                 <th class="th-top" *ngIf="addEval">
-                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                                        style="width: 110px;">
+                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
                                 </th>
                             </tr>
                         </thead>
@@ -154,8 +153,7 @@
                                 <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}
                                 </th>
                                 <th class="th-top" *ngIf="addEval">
-                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                                        style="width: 110px;">
+                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
                                 </th>
                             </tr>
                         </thead>
@@ -286,8 +284,7 @@
                                 <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}
                                 </th>
                                 <th class="th-top" *ngIf="addEval">
-                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                                        style="width: 110px;">
+                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
                                 </th>
                             </tr>
                         </thead>
@@ -394,8 +391,7 @@
                                 <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}
                                 </th>
                                 <th class="th-top" *ngIf="addEval">
-                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                                        style="width: 110px;">
+                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
                                 </th>
                             </tr>
                         </thead>
@@ -515,8 +511,7 @@
                                 <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}
                                 </th>
                                 <th class="th-top" *ngIf="addEval">
-                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                                        style="width: 110px;">
+                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
                                 </th>
                             </tr>
                         </thead>
@@ -734,8 +729,7 @@
                                 <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}
                                 </th>
                                 <th class="th-top" *ngIf="addEval">
-                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                                        style="width: 110px;">
+                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
                                 </th>
                             </tr>
                         </thead>
@@ -866,8 +860,7 @@
                                 <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}
                                 </th>
                                 <th class="th-top" *ngIf="addEval">
-                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                                        style="width: 110px;">
+                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
                                 </th>
                             </tr>
                         </thead>
