--- a/src/app/avaliation/flexibilidade/goniometro/goniometro.component.html
+++ b/src/app/avaliation/flexibilidade/goniometro/goniometro.component.html
@@ -15,8 +15,7 @@
                                 </th>
                                 <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}</th>
                                 <th class="th-top" *ngIf="addMesure">
-                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                                        style="width: 110px;">
+                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
                                 </th>
                             </tr>
                         </thead>
@@ -187,8 +186,7 @@
                                 </th>
                                 <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}</th>
                                 <th class="th-top" *ngIf="addMesure">
-                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                                        style="width: 110px;">
+                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
                                 </th>
                             </tr>
                         </thead>
@@ -325,8 +323,7 @@
                                 </th>
                                 <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}</th>
                                 <th class="th-top" *ngIf="addMesure">
-                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                                        style="width: 110px;">
+                                    <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
                                 </th>
                             </tr>
                         </thead>
