--- a/src/app/avaliation/composicao-corporal/dexa/dexa.component.html
+++ b/src/app/avaliation/composicao-corporal/dexa/dexa.component.html
@@ -20,8 +20,7 @@
                             </button>
                         </th>
                         <th class="th-top" *ngIf="addEval">
-                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                                style="width: 110px;">
+                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
                         </th>
                     </tr>
                 </thead>
