--- a/src/app/avaliation/dobras/slaugther/slaugther.component.html
+++ b/src/app/avaliation/dobras/slaugther/slaugther.component.html
@@ -23,7 +23,7 @@
                             </button>
                         </th>
                         <th class="th-top" *ngIf="addEval">
-                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" style="width: 110px;">
+                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
                         </th>
                     </tr>
                 </thead>
