--- a/src/app/avaliation/flexibilidade/banco-wells-dillon/banco-wells-dillon.component.html
+++ b/src/app/avaliation/flexibilidade/banco-wells-dillon/banco-wells-dillon.component.html
@@ -12,7 +12,7 @@
                         <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}</th>
                         <th class="th-top" *ngIf="addEval">
                             <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                                style="width: 110px;">
+                            class="data-input">
                         </th>
                     </tr>
                 </thead>
